# libecli

./: README.md  meson.build  meson_options.txt
examples/: meson.build
examples/minimal/: main.c  meson.build
lib/: ecli.c  ecli.h  ecli_builtin.c  ecli_cmd.h  ecli_root.c  ecli_types.c  ecli_types.h  ecli_yaml.c  ecli_yaml.h  queue-extension.h
